--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,9 @@
 {
+
+
   "name": "ytFastForward",
   "description": "Enables you to fast forward beyond 2x on youtube.",
-  "version": "1.0",
+  "version": "1.2",
   "permissions": [
     "tabs", "http://youtube.com/*", "https://youtube.com/*", "http://www.youtube.com/*", "https://www.youtube.com/*"
   ],
@@ -10,9 +12,9 @@
       "default_icon": "icon.png",
       "default_popup": "popup.html"
   },
-  "icons": { "16": "icon.png",
-           "48": "icon.png",
-          "128": "icon.png" },
+  "icons": { "16": "icon16.png",
+           "48": "icon48.png",
+          "128": "icon128.png" },
 
   "manifest_version": 2
 }
