--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
 
 
   "name": "ytFastForward",
-  "description": "Enables you to fast forward beyond 2x on youtube.",
-  "version": "1.2",
+  "description": "Youtube video speed controls on the extension icon. Enables you to fast forward beyond 2x on youtube. Very lightweight!",
+  "version": "1.31",
   "permissions": [
     "tabs", "http://youtube.com/*", "https://youtube.com/*", "http://www.youtube.com/*", "https://www.youtube.com/*"
   ],
