--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,29 @@
 {
-
-
-  "name": "ytFastForward",
-  "description": "Youtube video speed controls on the extension icon. Enables you to fast forward beyond 2x on youtube. Very lightweight!",
-  "version": "1.31",
-  "permissions": [
-    "tabs", "http://youtube.com/*", "https://youtube.com/*", "http://www.youtube.com/*", "https://www.youtube.com/*"
-  ],
-  "browser_action": {
-      "default_title": "Set speed",
-      "default_icon": "icon.png",
-      "default_popup": "popup.html"
+  "manifest_version": 3,
+  "name": "Fast Forward Speed Control",
+  "version": "1.60",
+  "description": "Control the playback speed of videos beyond standard limits.",
+  "permissions": ["storage", "activeTab", "scripting"],
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "icons/icon16.png",
+      "48": "icons/icon48.png",
+      "128": "icons/icon128.png"
+    }
   },
-  "icons": { "16": "icon16.png",
-           "48": "icon48.png",
-          "128": "icon128.png" },
-
-  "manifest_version": 2
+  "background": {
+    "service_worker": "background.js"
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content.js"]
+    }
+  ],
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  }
 }
